# datamonk-internship_projects

01 Foundation/01 LINUX/: 1_Everyday_use.md  2 Ubuntu Installation.md  2_ubuntu_installation.md  3_filesystem_&_more.md  4_permissions.md  5_installation_&_maintanence.md  6_desktop_customization.md  README.md
01_Linux/: 01_Everyday_Use.md
1_Foundation/: foundation_project.md
1_Foundation/01_linux/: 5_installation_&_maintanence.md  README.md
1_Foundation/02_GIT/: 1_why_version_control.md  2_getting_started.md  3_git_reset_merge.md  4_how_git_store_obj.md  5_git_branching.md
1_Foundation/google-drive-clone/: docker-compose.yml
2_Data_Engineering/1_SQLite/: README.md  sqlite_performance.py
2_Data_Engineering/2_Weather_Pipeline/: README.md  create_tables.py  daily_weather.py  global_weather.py  hourly_weather.py  india_cities.csv  main.py  requirements.txt  visualization.ipynb  weather_utils.py
2_Data_Engineering/3_Data_Visualization/: Average_Rental.py  Category_Distribution.py  Customers_Rentals.py  (+7 more)
2_Data_Engineering/9_Workflow_Orchestration/: README.md  data.db  pyproject.toml
2_Data_Engineering/9_Workflow_Orchestration/src/dagster_quickstart/: __init__.py  assets.py  definitions.py
2_Data_Engineering/9_Workflow_Orchestration/src/dagster_quickstart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
2_Data_Engineering/9_Workflow_Orchestration/src/dagster_quickstart/defs/: __init__.py
2_Data_Engineering/9_Workflow_Orchestration/src/dagster_quickstart/utils/: __init__.py  daily_weather.py  global_weather.py  hourly_weather.py  tables.py  weather_utils.py
(+78 files in other folders)
